package lab11.Ex2_NullObject;

public abstract class Employee {
    protected String name;
    public abstract String getName();
}
